@@ -16,15 +16,13 @@ import lombok.extern.log4j.Log4j2;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import org.cardanofoundation.conversions.CardanoConverters;
 import org.cardanofoundation.explorer.api.common.constant.CommonConstant;
 import org.cardanofoundation.explorer.api.common.enumeration.AnalyticType;
 import org.cardanofoundation.explorer.api.exception.BusinessCode;
-import org.cardanofoundation.explorer.api.mapper.AddressMapper;
-import org.cardanofoundation.explorer.api.mapper.AssetMetadataMapper;
 import org.cardanofoundation.explorer.api.mapper.TokenMapper;
 import org.cardanofoundation.explorer.api.model.response.BaseFilterResponse;
 import org.cardanofoundation.explorer.api.model.response.address.AddressChartBalanceData;
@@ -32,13 +30,10 @@ import org.cardanofoundation.explorer.api.model.response.address.AddressChartBal
 import org.cardanofoundation.explorer.api.model.response.address.AddressFilterResponse;
 import org.cardanofoundation.explorer.api.model.response.address.AddressResponse;
 import org.cardanofoundation.explorer.api.model.response.token.TokenAddressResponse;
+import org.cardanofoundation.explorer.api.projection.AddressQuantityDayProjection;
 import org.cardanofoundation.explorer.api.repository.ledgersync.AddressRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.AddressTxAmountRepository;
-import org.cardanofoundation.explorer.api.repository.ledgersync.AddressTxCountRepository;
-import org.cardanofoundation.explorer.api.repository.ledgersync.AggregateAddressTxBalanceRepository;
-import org.cardanofoundation.explorer.api.repository.ledgersync.AssetMetadataRepository;
-import org.cardanofoundation.explorer.api.repository.ledgersync.LatestAddressBalanceRepository;
-import org.cardanofoundation.explorer.api.repository.ledgersync.LatestTokenBalanceRepository;
+import org.cardanofoundation.explorer.api.repository.ledgersync.MultiAssetRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.ScriptRepository;
 import org.cardanofoundation.explorer.api.service.AddressService;
 import org.cardanofoundation.explorer.api.util.AddressUtils;
@@ -46,9 +41,6 @@ import org.cardanofoundation.explorer.api.util.DataUtil;
 import org.cardanofoundation.explorer.api.util.DateUtils;
 import org.cardanofoundation.explorer.common.entity.enumeration.ScriptType;
 import org.cardanofoundation.explorer.common.entity.ledgersync.Address;
-import org.cardanofoundation.explorer.common.entity.ledgersync.AddressTxCount;
-import org.cardanofoundation.explorer.common.entity.ledgersync.LatestAddressBalance;
-import org.cardanofoundation.explorer.common.entity.ledgersync.aggregation.AggregateAddressTxBalance;
 import org.cardanofoundation.explorer.common.exception.BusinessException;
 
 @Service
@@ -56,18 +48,13 @@ import org.cardanofoundation.explorer.common.exception.BusinessException;
 @Log4j2
 public class AddressServiceImpl implements AddressService {
 
-  //  private final AddressTxBalanceRepository addressTxBalanceRepository;
   private final AddressRepository addressRepository;
-  private final AssetMetadataRepository assetMetadataRepository;
-  private final LatestAddressBalanceRepository latestAddressBalanceRepository;
-  private final LatestTokenBalanceRepository latestTokenBalanceRepository;
+  private final MultiAssetRepository multiAssetRepository;
   private final TokenMapper tokenMapper;
-  private final AddressMapper addressMapper;
-  private final AssetMetadataMapper assetMetadataMapper;
   private final ScriptRepository scriptRepository;
-  private final AggregateAddressTxBalanceRepository aggregateAddressTxBalanceRepository;
-  private final AddressTxCountRepository addressTxCountRepository;
   private final AddressTxAmountRepository addressTxAmountRepository;
+
+  private final CardanoConverters converters;
 
   @Value("${application.network}")
   private String network;
@@ -137,12 +124,8 @@ public class AddressServiceImpl implements AddressService {
             .orElseThrow(() -> new BusinessException(BusinessCode.ADDRESS_NOT_FOUND));
     AddressChartBalanceResponse response = new AddressChartBalanceResponse();
 
-    AddressTxCount addressTxCount =
-        addressTxCountRepository
-            .findById(address)
-            .orElse(AddressTxCount.builder().address(address).txCount(0L).build());
-
-    if (Long.valueOf(0).equals(addressTxCount.getTxCount())) {
+    Long txCount = addressTxAmountRepository.getTxCountForAddress(address).orElse(0L);
+    if (Long.valueOf(0).equals(txCount)) {
       return AddressChartBalanceResponse.builder()
           .highestBalance(BigInteger.ZERO)
           .lowestBalance(BigInteger.ZERO)
@@ -155,17 +138,18 @@ public class AddressServiceImpl implements AddressService {
     if (AnalyticType.ONE_DAY.equals(type)) {
       var fromBalance =
           addressTxAmountRepository
-              .sumBalanceByAddress(addr.getAddress(), dates.get(0).toEpochSecond(ZoneOffset.UTC))
+              .sumBalanceByAddressToSlot(
+                  addr.getAddress(), dates.get(0).toEpochSecond(ZoneOffset.UTC))
               .orElse(BigInteger.ZERO);
       getHighestAndLowestBalance(addr, fromBalance, dates, response);
 
       data.add(new AddressChartBalanceData(dates.get(0), fromBalance));
       for (int i = 1; i < dates.size(); i++) {
         Optional<BigInteger> balance =
-            addressTxAmountRepository.getBalanceByAddressAndTime(
+            addressTxAmountRepository.getBalanceByAddressAndSlotRange(
                 addr.getAddress(),
-                dates.get(i - 1).toInstant(ZoneOffset.UTC).getEpochSecond(),
-                dates.get(i).toInstant(ZoneOffset.UTC).getEpochSecond());
+                converters.time().toSlot(dates.get(i - 1)),
+                converters.time().toSlot(dates.get(i)));
 
         if (balance.isPresent()) {
           fromBalance = fromBalance.add(balance.get());
@@ -179,22 +163,24 @@ public class AddressServiceImpl implements AddressService {
 
       var fromBalance =
           addressTxAmountRepository
-              .sumBalanceByAddress(addr.getAddress(), dates.get(0).toEpochSecond(ZoneOffset.UTC))
+              .sumBalanceByAddressToSlot(addr.getAddress(), converters.time().toSlot(dates.get(0)))
               .orElse(BigInteger.ZERO);
       getHighestAndLowestBalance(addr, fromBalance, dates, response);
+      long from = converters.time().toSlot(dates.get(0));
+      long to = converters.time().toSlot(dates.get(dates.size() - 1));
 
-      List<AggregateAddressTxBalance> aggregateAddressTxBalances =
-          aggregateAddressTxBalanceRepository.findAllByAddressIdAndDayBetween(
-              addr.getId(), dates.get(0).toLocalDate(), dates.get(dates.size() - 1).toLocalDate());
+      List<AddressQuantityDayProjection> allByAddressAndDayBetween =
+          addressTxAmountRepository.findAllByAddressAndSlotBetween(addr.getAddress(), from, to);
 
       // Data in aggregate_address_tx_balance save at end of day, but we will display start of day
       // So we need to add 1 day to display correct data
       Map<LocalDate, BigInteger> mapBalance =
-          aggregateAddressTxBalances.stream()
+          allByAddressAndDayBetween.stream()
               .collect(
                   Collectors.toMap(
-                      balance -> balance.getDay().plusDays(1),
-                      AggregateAddressTxBalance::getBalance));
+                      aggBalance ->
+                          aggBalance.getDay().atZone(ZoneOffset.UTC).toLocalDate().plusDays(1),
+                      AddressQuantityDayProjection::getQuantity));
       for (LocalDateTime date : dates) {
         if (mapBalance.containsKey(date.toLocalDate())) {
           fromBalance = fromBalance.add(mapBalance.get(date.toLocalDate()));
@@ -220,11 +206,11 @@ public class AddressServiceImpl implements AddressService {
       List<LocalDateTime> dates,
       AddressChartBalanceResponse response) {
     var minMaxBalance =
-        addressTxAmountRepository.findMinMaxBalanceByAddress(
+        addressTxAmountRepository.findMinMaxBalanceByAddressAndSlotRange(
             addr.getAddress(),
             fromBalance,
-            dates.get(0).toInstant(ZoneOffset.UTC).getEpochSecond(),
-            dates.get(dates.size() - 1).toInstant(ZoneOffset.UTC).getEpochSecond());
+            converters.time().toSlot(dates.get(0)),
+            converters.time().toSlot(dates.get(dates.size() - 1)));
     if (minMaxBalance.getMaxVal().compareTo(fromBalance) > 0) {
       response.setHighestBalance(minMaxBalance.getMaxVal());
     } else {
@@ -246,31 +232,31 @@ public class AddressServiceImpl implements AddressService {
   //  }
   @Override
   public BaseFilterResponse<AddressFilterResponse> getTopAddress(Pageable pageable) {
-    List<LatestAddressBalance> latestAddressBalances =
-        latestAddressBalanceRepository.findAllLatestAddressBalance(pageable);
-    Page<LatestAddressBalance> latestAddressBalancePage =
-        new PageImpl<>(latestAddressBalances, pageable, pageable.getPageSize());
+    // TODO will be removed for release 1.3, need to be fixed in next release
 
-    Map<String, Long> addressTxCountMap =
-        addressTxCountRepository
-            .findAllByAddressIn(
-                latestAddressBalancePage.stream().map(LatestAddressBalance::getAddress).toList())
-            .stream()
-            .collect(Collectors.toMap(AddressTxCount::getAddress, AddressTxCount::getTxCount));
-
-    List<AddressFilterResponse> addressFilterResponses =
-        latestAddressBalancePage.stream()
-            .map(
-                latestAddressBalance ->
-                    AddressFilterResponse.builder()
-                        .address(latestAddressBalance.getAddress())
-                        .balance(latestAddressBalance.getQuantity())
-                        .txCount(
-                            addressTxCountMap.getOrDefault(latestAddressBalance.getAddress(), 0L))
-                        .build())
-            .collect(Collectors.toList());
-
-    return new BaseFilterResponse<>(latestAddressBalancePage, addressFilterResponses);
+    //    List<LatestAddressBalance> latestAddressBalances =
+    //        latestAddressBalanceRepository.findAllLatestAddressBalance(pageable);
+    //    Page<LatestAddressBalance> latestAddressBalancePage =
+    //        new PageImpl<>(latestAddressBalances, pageable, pageable.getPageSize());
+    //    List<AddressTxCountProjection> addressTxCountProjections =
+    // addressTxAmountRepository.getTxCountListForAddresses(latestAddressBalancePage.stream().map(LatestAddressBalance::getAddress).toList());
+    //    Map<String, Long> addressTxCountMap = addressTxCountProjections
+    //            .stream().collect(Collectors.toMap(AddressTxCountProjection::getAddress,
+    // AddressTxCountProjection::getTxCount));
+    //    List<AddressFilterResponse> addressFilterResponses =
+    //        latestAddressBalancePage.stream()
+    //            .map(
+    //                latestAddressBalance ->
+    //                    AddressFilterResponse.builder()
+    //                        .address(latestAddressBalance.getAddress())
+    //                        .balance(latestAddressBalance.getQuantity())
+    //                        .txCount(
+    //                            addressTxCountMap.getOrDefault(latestAddressBalance.getAddress(),
+    // 0L))
+    //                        .build())
+    //            .collect(Collectors.toList());
+    //    return new BaseFilterResponse<>(latestAddressBalancePage, addressFilterResponses);
+    return new BaseFilterResponse<>();
   }
 
   /**
@@ -288,13 +274,13 @@ public class AddressServiceImpl implements AddressService {
 
     if (DataUtil.isNullOrEmpty(displayName)) {
       tokenListResponse =
-          latestTokenBalanceRepository
+          multiAssetRepository
               .findTokenAndBalanceByAddress(address, pageable)
               .map(tokenMapper::fromAddressTokenProjection);
     } else {
       displayName = displayName.trim().toLowerCase();
       tokenListResponse =
-          latestTokenBalanceRepository
+          multiAssetRepository
               .findTokenAndBalanceByAddressAndNameView(address, displayName, pageable)
               .map(tokenMapper::fromAddressTokenProjection);
     }
