@@ -10,6 +10,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -26,6 +27,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import org.apache.commons.lang3.StringUtils;
 
+import org.cardanofoundation.conversions.CardanoConverters;
 import org.cardanofoundation.explorer.api.common.constant.CommonConstant;
 import org.cardanofoundation.explorer.api.common.enumeration.AnalyticType;
 import org.cardanofoundation.explorer.api.common.enumeration.TokenType;
@@ -39,13 +41,12 @@ import org.cardanofoundation.explorer.api.model.response.token.TokenFilterRespon
 import org.cardanofoundation.explorer.api.model.response.token.TokenMintTxResponse;
 import org.cardanofoundation.explorer.api.model.response.token.TokenResponse;
 import org.cardanofoundation.explorer.api.model.response.token.TokenVolumeAnalyticsResponse;
+import org.cardanofoundation.explorer.api.projection.AddressQuantityDayProjection;
 import org.cardanofoundation.explorer.api.projection.TokenProjection;
 import org.cardanofoundation.explorer.api.repository.explorer.TokenInfoRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.AddressRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.AddressTxAmountRepository;
-import org.cardanofoundation.explorer.api.repository.ledgersync.AggregateAddressTokenRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.AssetMetadataRepository;
-import org.cardanofoundation.explorer.api.repository.ledgersync.LatestTokenBalanceRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.MaTxMintRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.MultiAssetRepository;
 import org.cardanofoundation.explorer.api.repository.ledgersync.ScriptRepository;
@@ -64,7 +65,6 @@ import org.cardanofoundation.explorer.common.entity.ledgersync.MultiAsset;
 import org.cardanofoundation.explorer.common.entity.ledgersync.MultiAsset_;
 import org.cardanofoundation.explorer.common.entity.ledgersync.Script;
 import org.cardanofoundation.explorer.common.entity.ledgersync.TokenTxCount_;
-import org.cardanofoundation.explorer.common.entity.ledgersync.aggregation.AggregateAddressToken;
 import org.cardanofoundation.explorer.common.exception.BusinessException;
 
 @Service
@@ -75,7 +75,6 @@ public class TokenServiceImpl implements TokenService {
   private final MultiAssetRepository multiAssetRepository;
   private final MaTxMintRepository maTxMintRepository;
   private final AssetMetadataRepository assetMetadataRepository;
-  private final LatestTokenBalanceRepository latestTokenBalanceRepository;
   private final AddressRepository addressRepository;
   private final AddressTxAmountRepository addressTxAmountRepository;
   private final StakeAddressRepository stakeAddressRepository;
@@ -84,9 +83,10 @@ public class TokenServiceImpl implements TokenService {
   private final TokenMapper tokenMapper;
   private final MaTxMintMapper maTxMintMapper;
   private final AssetMetadataMapper assetMetadataMapper;
-  private final AggregateAddressTokenRepository aggregateAddressTokenRepository;
   private final AggregatedDataCacheService aggregatedDataCacheService;
   private final TokenInfoRepository tokenInfoRepository;
+
+  private final CardanoConverters converters;
   private static final int MAX_TOTAL_ELEMENTS = 1000;
 
   @Override
@@ -131,9 +131,7 @@ public class TokenServiceImpl implements TokenService {
     Map<String, Script> scriptMap =
         scriptRepository
             .findAllByHashIn(
-                multiAssets.getContent().stream()
-                    .map(TokenProjection::getPolicy)
-                    .collect(Collectors.toList()))
+                multiAssets.getContent().stream().map(TokenProjection::getPolicy).toList())
             .stream()
             .collect(Collectors.toMap(Script::getHash, Function.identity()));
 
@@ -191,11 +189,12 @@ public class TokenServiceImpl implements TokenService {
             .orElseThrow(() -> new BusinessException(BusinessCode.TOKEN_NOT_FOUND));
 
     TokenResponse tokenResponse = tokenMapper.fromMultiAssetToResponse(multiAsset);
-    Long tokenTxCount =
-        multiAssetRepository.getTokenTxCount(multiAsset.getFingerprint()).orElse(0L);
+    Optional<TokenInfo> tokenInfo =
+        tokenInfoRepository.findTokenInfoByMultiAssetId(multiAsset.getId());
+    Long tokenTxCount = tokenInfo.map(TokenInfo::getTxCount).orElse(0L);
     tokenResponse.setTxCount(tokenTxCount.intValue());
-    var tokenInfo = tokenInfoRepository.findTokenInfoByMultiAssetId(multiAsset.getId());
-    var now = LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
+
+    LocalDateTime now = LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
 
     if (tokenInfo.isEmpty()) {
       tokenResponse.setNumberOfHolders(0L);
@@ -210,16 +209,15 @@ public class TokenServiceImpl implements TokenService {
       tokenResponse.setTotalVolume(String.valueOf(tokenInfo.get().getTotalVolume()));
       tokenResponse.setNumberOfHolders(tokenInfo.get().getNumberOfHolders());
     }
-
     AssetMetadata assetMetadata =
         assetMetadataRepository
             .findFirstBySubject(multiAsset.getPolicy() + multiAsset.getName())
             .orElse(null);
-
     tokenResponse.setMetadata(assetMetadataMapper.fromAssetMetadata(assetMetadata));
 
     Long latestEpochTime =
-        addressTxAmountRepository.getLastActivityTimeOfToken(multiAsset.getUnit());
+            addressTxAmountRepository.getLastActivityTimeOfToken(multiAsset.getUnit());
+
     tokenResponse.setTokenLastActivity(
         Timestamp.valueOf(
             LocalDateTime.ofInstant(Instant.ofEpochSecond(latestEpochTime), ZoneOffset.UTC)));
@@ -233,28 +231,31 @@ public class TokenServiceImpl implements TokenService {
     return new BaseFilterResponse<>(maTxMints.map(maTxMintMapper::fromMaTxMintToTokenMintTx));
   }
 
+  // TODO function will be removed in this release
   @Override
   public BaseFilterResponse<TokenAddressResponse> getTopHolders(String tokenId, Pageable pageable) {
-    MultiAsset multiAsset =
-        multiAssetRepository
-            .findByFingerprint(tokenId)
-            .orElseThrow(() -> new BusinessException(BusinessCode.TOKEN_NOT_FOUND));
-
-    long numberOfHolders =
-        tokenInfoRepository
-            .findTokenInfoByMultiAssetId(multiAsset.getId())
-            .map(TokenInfo::getNumberOfHolders)
-            .orElse(0L);
-
-    List<TokenAddressResponse> tokenAddressResponses =
-        latestTokenBalanceRepository.getTopHolderOfToken(multiAsset.getUnit(), pageable).stream()
-            .map(tokenMapper::fromAddressTokenProjection)
-            .collect(Collectors.toList());
-
-    Page<TokenAddressResponse> tokenAddressResponsePage =
-        new PageImpl<>(tokenAddressResponses, pageable, numberOfHolders);
-
-    return new BaseFilterResponse<>(tokenAddressResponsePage);
+    //    MultiAsset multiAsset =
+    //        multiAssetRepository
+    //            .findByFingerprint(tokenId)
+    //            .orElseThrow(() -> new BusinessException(BusinessCode.TOKEN_NOT_FOUND));
+    //
+    //    long numberOfHolders =
+    //        tokenInfoRepository
+    //            .findTokenInfoByMultiAssetId(multiAsset.getId())
+    //            .map(TokenInfo::getNumberOfHolders)
+    //            .orElse(0L);
+    //
+    //    List<TokenAddressResponse> tokenAddressResponses =
+    //        latestTokenBalanceRepository.getTopHolderOfToken(multiAsset.getUnit(),
+    // pageable).stream()
+    //            .map(tokenMapper::fromAddressTokenProjection)
+    //            .collect(Collectors.toList());
+    //
+    //    Page<TokenAddressResponse> tokenAddressResponsePage =
+    //        new PageImpl<>(tokenAddressResponses, pageable, numberOfHolders);
+    //
+    //    return new BaseFilterResponse<>(tokenAddressResponsePage);
+    return new BaseFilterResponse<>();
   }
 
   @Override
@@ -273,25 +274,26 @@ public class TokenServiceImpl implements TokenService {
       for (int i = 0; i < dates.size() - 1; i++) {
         BigInteger balance =
             addressTxAmountRepository
-                .sumBalanceBetweenTime(
+                .sumBalanceBetweenSlotRange(
                     multiAsset.getUnit(),
-                    dates.get(i).toInstant(ZoneOffset.UTC).getEpochSecond(),
-                    dates.get(i + 1).toInstant(ZoneOffset.UTC).getEpochSecond())
+                    converters.time().toSlot(dates.get(i)),
+                    converters.time().toSlot(dates.get(i + 1)))
                 .orElse(BigInteger.ZERO);
         responses.add(new TokenVolumeAnalyticsResponse(dates.get(i), balance));
       }
     } else {
       dates.remove(dates.size() - 1);
-      List<AggregateAddressToken> aggregateAddressTokens =
-          aggregateAddressTokenRepository.findAllByIdentAndDayBetween(
-              multiAsset.getId(),
-              dates.get(0).toLocalDate(),
-              dates.get(dates.size() - 1).toLocalDate());
+      long from = converters.time().toSlot(dates.get(0));
+      long to = converters.time().toSlot(dates.get(dates.size() - 1));
+      List<AddressQuantityDayProjection> allByTokenIdAndDayBetween =
+          addressTxAmountRepository.findAllByTokenIdAndSlotBetween(multiAsset.getId(), from, to);
+
       Map<LocalDate, BigInteger> aggregateAddressTokenMap =
           StreamUtil.toMap(
-              aggregateAddressTokens,
-              AggregateAddressToken::getDay,
-              AggregateAddressToken::getBalance);
+              allByTokenIdAndDayBetween,
+              addressQuantityDayProjection ->
+                  addressQuantityDayProjection.getDay().atZone(ZoneOffset.UTC).toLocalDate(),
+              AddressQuantityDayProjection::getQuantity);
       for (LocalDateTime date : dates) {
         TokenVolumeAnalyticsResponse tokenVolume =
             new TokenVolumeAnalyticsResponse(
